--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
 
 <section class="product-detail">
   <h1><%= @product.name %></h1>
-  <%= image_tag @product.photo.url(:medium) %>
+  <%= image_tag @product.photo_file_name %>
   <section class="details">
     <p>
       <strong>Price:</strong>
