changed photo url for featured images

--- a/app/views/products/_view_products.html.erb
+++ b/app/views/products/_view_products.html.erb
@@ -4,7 +4,7 @@
 <% @products.each do |product| %>
 
 		<article class="product-module">
-			<p><%= image_tag product.photo.url(:medium) %></p>
+			<p><%= image_tag product.photo_file_name %></p>
 			<p>
 				<strong><%= link_to product.name.truncate(20), product %></strong><br />
 				$<%= product.formatted_price %>
